Test Data/BPP/BPP-MELA/outputs/bpp-black_box/2025-07-19_18-51-19/problem_iter3_stdout_6.txt
Traceback (most recent call last):
  File "C:\Users\22973\Desktop\meevo-main\meevo/evaluators/bpp/main.py", line 9, in <module>
    import gpt
  File "C:\Users\22973\Desktop\meevo-main\meevo\evaluators\bpp\gpt.py", line 9
    heuristic = (1/(np.abs(size_matrix - node_constraint) + 1e-6) * (0.5 + 0.5*size_ratio)
                ^
SyntaxError: '(' was never closed
